<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/plant_picture_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description_plant_image"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/plant_chinese_name_text_view"
                style="@style/TitleTextView.PlantDetailTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="九芎" />

            <TextView
                android:id="@+id/plant_detail_latin_name_text_view"
                style="@style/ValueTextView.PlantDetailValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Subcostate Crape Myrtle" />

            <TextView
                android:id="@+id/plant_detail_alias_title_text_view"
                style="@style/TitleTextView.PlantDetailTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alias" />

            <TextView
                android:id="@+id/plant_detail_alias_textView"
                style="@style/ValueTextView.PlantDetailValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="苞飯花、拘那花、小果紫薇、南紫薇、猴不爬、怕癢樹、南紫薇、九荊、馬鈴花、蚊仔" />

            <TextView
                android:id="@+id/plant_detail_introduction_title_text_view"
                style="@style/TitleTextView.PlantDetailTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction" />

            <TextView
                android:id="@+id/plant_detail_introduction_text_view"
                style="@style/ValueTextView.PlantDetailValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="分布於中低海拔森林及長江以南的地區，為台灣的原生樹種。主要生長在潮濕的崩塌地，有吸水保持土壤之特性，所以是良好的水土保持樹種。" />

            <TextView
                android:id="@+id/plant_detail_distinguish_title_text_view"
                style="@style/TitleTextView.PlantDetailTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distinguish_method" />

            <TextView
                android:id="@+id/plant_detail_distinguish_text_view"
                style="@style/ValueTextView.PlantDetailValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="紅褐色的樹皮剝落後呈灰白色，樹幹光滑堅硬。葉有極短的柄，長橢圓形或卵形，全綠，葉片兩端尖，秋冬轉紅。夏季6～8月開花，花冠白色，花數甚多而密生於枝端，花為圓錐花序頂生，花瓣有長柄，邊緣皺曲像衣裙的花邊花絲長短不一。果實為蒴果，橢圓形約6-8公厘，種子有翅。" />

            <TextView
                android:id="@+id/plant_detail_function_title_text_view"
                style="@style/TitleTextView.PlantDetailTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/functional_ability" />

            <TextView
                android:id="@+id/plant_detail_function_text_view"
                style="@style/ValueTextView.PlantDetailValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="1. 優良薪炭材：木質堅硬耐燒，是臺灣優良的薪炭材之一。\n2. 水土保持植栽：可栽植於河岸及邊坡供水土保持。\n3. 農具用材：木質堅硬，乾燥後不太會反翹，是做農具的用材。\n4. 食用性：花、根入藥，味淡微苦，敗毒散瘀，花蕾味苦有清香，可生食。葉子是長尾水青蛾幼蟲的食草。" />

            <TextView
                android:id="@+id/plant_detail_last_update_text_view"
                style="@style/ValueTextView.PlantDetailLastUpdateValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="最後更新:" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>